<resources>
    <string name="app_name">appimc</string>

    <string name="login_titulo">Login</string>

    <string name="login_subtitulo">Faça login para continuar</string>

    <string name="login_et_email">E-mail</string>

    <string name="login_et_senha">Senha</string>
    <string name="login_entrar">Entrar</string>
    <string name="login_lembrar_me">Lembrar-me</string>
    <string name="login_esqueci">Esqueci a senha</string>
    <string name="login_n_o_tem_conta">Não tem conta?</string>
    <string name="login_criar_uma_conta_agora">Criar uma conta agora</string>
</resources>